<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TeleRTX</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="enter_code">Enter verification code</string>
    <string name="verification_code">Verification Code</string>
    <string name="send_code">Send Code</string>
    <string name="verify">Verify</string>
    <string name="welcome">Welcome to TeleRTX</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="login_status">Not logged in</string>
    <string name="login_to_telegram">Login to Telegram</string>
    <string name="logout_success">Logged out successfully</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="invalid_phone">Please enter a valid phone number</string>
    <string name="invalid_code">Please enter a valid verification code</string>
</resources>
